<resources>
    <string name="app_name" translatable="false">Thurii</string>
    <string name="btn_continue">Continuer</string>
    <string name="log_in_button">S\'inscrire</string>
    <string name="sign_in_button">J\'ai déjà un compte</string>
    <string name="link">En continuant, vous acceptez nos <a href="https://youtu.be/dQw4w9WgXcQ">Conditions d\'utilisation </a>et <a href="https://youtu.be/dQw4w9WgXcQ">Politique de confidentialité </a></string>
    <string name="password">Mot de passe</string>
    <string name="email">E-mail</string>
    <string name="back">Bouton Retour</string>
    <string name="register_gender_title">À laquelle des options suivantes vous identifiez-vous le plus ?</string>
    <string name="register_first_des">Thurii utilise cette information pour concevoir vos programmes d’entraînement lors de vos sorties.</string>
    <string name="female">Femme</string>
    <string name="male">Homme</string>
    <string name="register_info_title">Fournissez à votre Coach quelques dernières informations</string>
    <string name="register_info_des">Ces informations permettent de vous fournir des données et un entrainement pertinent et personnalisé ainsi qu’adapter vos sorties à votre niveau.</string>
    <string name="birthday">Date de naissance</string>
    <string name="weight">Poids</string>
    <string name="size">Taille</string>
    <string name="register_sport_title">Quels sont les activités outdoors que vous pratiquez lors de vos sorties ?</string>
    <string name="register_sport_des">Classez vos pratiques par ordre de préférence.</string>
    <string name="rando">Randonée</string>
    <string name="escalade">Escalade</string>
    <string name="snow">Ski/Snow</string>
    <string name="register_way_title">Vous y êtes presque</string>
    <string name="register_way_des">Créez un compte pour accéder aux autres profils, à la création d\'itiniraire, à votre programme d\'entaînement et au suivi de vos sessions.</string>
    <string name="register_google">S\'inscrire avec Google</string>
    <string name="register_email">Continuer avec un e-mail</string>
    <string name="condition_politic">En continuant, j\'accepte les conditions <a href="https://youtu.be/dQw4w9WgXcQ">Conditions d\'utilisation</a>et la  <a href="https://youtu.be/dQw4w9WgXcQ">Politique de confidentialité</a>de Thurii.</string>
    <string name="no_share_info">Rien n\'est partagé sans votre autorisation.</string>
    <string name="log_out">Déconnexion</string>
    <string-array name="weights">
        <item>choose</item>
        <item>40 kg</item>
        <item>41 kg</item>
        <item>42 kg</item>
        <item>43 kg</item>
        <item>44 kg</item>
        <item>45 kg</item>
        <item>46 kg</item>
        <item>47 kg</item>
        <item>48 kg</item>
        <item>49 kg</item>
        <item>50 kg</item>
        <item>51 kg</item>
        <item>52 kg</item>
        <item>53 kg</item>
        <item>54 kg</item>
        <item>55 kg</item>
        <item>56 kg</item>
        <item>57 kg</item>
        <item>58 kg</item>
        <item>59 kg</item>
        <item>60 kg</item>
        <item>61 kg</item>
        <item>62 kg</item>
        <item>63 kg</item>
        <item>64 kg</item>
        <item>65 kg</item>
        <item>66 kg</item>
        <item>67 kg</item>
        <item>68 kg</item>
        <item>69 kg</item>
        <item>70 kg</item>
        <item>71 kg</item>
        <item>72 kg</item>
        <item>73 kg</item>
        <item>74 kg</item>
        <item>75 kg</item>
        <item>76 kg</item>
        <item>77 kg</item>
        <item>78 kg</item>
        <item>79 kg</item>
        <item>80 kg</item>
        <item>81 kg</item>
        <item>82 kg</item>
        <item>83 kg</item>
        <item>84 kg</item>
        <item>85 kg</item>
        <item>86 kg</item>
        <item>87 kg</item>
        <item>88 kg</item>
        <item>89 kg</item>
        <item>90 kg</item>
        <item>91 kg</item>
        <item>92 kg</item>
        <item>93 kg</item>
        <item>94 kg</item>
        <item>95 kg</item>
        <item>96 kg</item>
        <item>97 kg</item>
        <item>98 kg</item>
        <item>99 kg</item>
        <item>100 kg</item>
        <item>101 kg</item>
        <item>102 kg</item>
        <item>103 kg</item>
        <item>104 kg</item>
        <item>105 kg</item>
        <item>106 kg</item>
        <item>107 kg</item>
        <item>108 kg</item>
        <item>109 kg</item>
        <item>110 kg</item>
        <item>111 kg</item>
        <item>112 kg</item>
        <item>113 kg</item>
        <item>114 kg</item>
        <item>115 kg</item>
        <item>116 kg</item>
        <item>117 kg</item>
        <item>118 kg</item>
        <item>119 kg</item>
        <item>120 kg</item>
        <item>121 kg</item>
        <item>122 kg</item>
        <item>123 kg</item>
        <item>124 kg</item>
        <item>125 kg</item>
        <item>126 kg</item>
        <item>127 kg</item>
        <item>128 kg</item>
        <item>129 kg</item>
        <item>130 kg</item>
        <item>131 kg</item>
        <item>132 kg</item>
        <item>133 kg</item>
        <item>134 kg</item>
        <item>135 kg</item>
        <item>136 kg</item>
        <item>137 kg</item>
        <item>138 kg</item>
        <item>139 kg</item>
        <item>140 kg</item>
        <item>141 kg</item>
        <item>142 kg</item>
        <item>143 kg</item>
        <item>144 kg</item>
        <item>145 kg</item>
        <item>146 kg</item>
        <item>147 kg</item>
        <item>148 kg</item>
        <item>149 kg</item>
        <item>150 kg</item>
        <item>151 kg</item>
        <item>152 kg</item>
        <item>153 kg</item>
        <item>154 kg</item>
        <item>155 kg</item>
        <item>156 kg</item>
        <item>157 kg</item>
        <item>158 kg</item>
        <item>159 kg</item>
        <item>160 kg</item>
        <item>161 kg</item>
        <item>162 kg</item>
        <item>163 kg</item>
        <item>164 kg</item>
        <item>165 kg</item>
        <item>166 kg</item>
        <item>167 kg</item>
        <item>168 kg</item>
        <item>169 kg</item>
        <item>170 kg</item>
        <item>171 kg</item>
        <item>172 kg</item>
        <item>173 kg</item>
        <item>174 kg</item>
        <item>175 kg</item>
        <item>176 kg</item>
        <item>177 kg</item>
        <item>178 kg</item>
        <item>179 kg</item>
    </string-array>
    <string-array name="heights">
        <item>choose</item>
        <item>150 cm</item>
        <item>151 cm</item>
        <item>152 cm</item>
        <item>153 cm</item>
        <item>154 cm</item>
        <item>155 cm</item>
        <item>156 cm</item>
        <item>157 cm</item>
        <item>158 cm</item>
        <item>159 cm</item>
        <item>160 cm</item>
        <item>161 cm</item>
        <item>162 cm</item>
        <item>163 cm</item>
        <item>164 cm</item>
        <item>165 cm</item>
        <item>166 cm</item>
        <item>167 cm</item>
        <item>168 cm</item>
        <item>169 cm</item>
        <item>170 cm</item>
        <item>171 cm</item>
        <item>172 cm</item>
        <item>173 cm</item>
        <item>174 cm</item>
        <item>175 cm</item>
        <item>176 cm</item>
        <item>177 cm</item>
        <item>178 cm</item>
        <item>179 cm</item>
        <item>180 cm</item>
        <item>181 cm</item>
        <item>182 cm</item>
        <item>183 cm</item>
        <item>184 cm</item>
        <item>185 cm</item>
        <item>186 cm</item>
        <item>187 cm</item>
        <item>188 cm</item>
        <item>189 cm</item>
        <item>190 cm</item>
        <item>191 cm</item>
        <item>192 cm</item>
        <item>193 cm</item>
        <item>194 cm</item>
        <item>195 cm</item>
        <item>196 cm</item>
        <item>197 cm</item>
        <item>198 cm</item>
        <item>199 cm</item>
        <item>200 cm</item>
        <item>201 cm</item>
        <item>202 cm</item>
        <item>203 cm</item>
        <item>204 cm</item>
        <item>205 cm</item>
        <item>206 cm</item>
        <item>207 cm</item>
        <item>208 cm</item>
        <item>209 cm</item>
        <item>210 cm</item>
        <item>211 cm</item>
        <item>212 cm</item>
        <item>213 cm</item>
        <item>214 cm</item>
        <item>215 cm</item>
        <item>216 cm</item>
        <item>217 cm</item>
        <item>218 cm</item>
        <item>219 cm</item>
    </string-array>
    <string name="pseudo">Pseudo</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="double_auth_title">Double authentification</string>
    <string name="numero">Mon numéro</string>
    <string name="double_auth_des">Appuie sur Continuer pour recevoir un message de la part de Tinder avec un code de vérification. Des frais liés à l’envoi de messages et/ou d’utilisation de données peuvent s’appliquer. Le numéro de téléphone vérifié pourra être utilisé pour te connecter. Découvre ce qui se passe si tu changes de numéro de téléphone.</string>
</resources>