<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0F0F"
    android:id="@+id/fragment1">

    <TextView
        android:id="@+id/way_title"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/register_way_title"
        android:textColor="#EBF5F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/way_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="23dp"
        android:src="@drawable/register_img_way"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/way_title" />

    <TextView
        android:id="@+id/way_des"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="23dp"
        android:text="@string/register_way_des"
        android:textColor="#EBF5F9"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/way_img" />

    <Button
        android:id="@+id/regi_google"
        style="@style/ButtonGreenStyle"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/register_google"
        android:drawableLeft="@drawable/google"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/way_des" />

    <Button
        android:id="@+id/regi_mail"
        style="@style/ButtonStroke"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regi_google" />

    <TextView
        android:id="@+id/no_share_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_share_info"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regi_mail" />

    <TextView
        android:id="@+id/condition_politic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:text="@string/condition_politic"
        android:textColor="@color/white"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>