<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0B0F0F"
    android:id="@+id/activity_regi_email">

    <ImageButton
        android:id="@+id/backbtn"
        android:contentDescription="@string/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:onClick="goToLastFragment"
        android:background="?android:selectableItemBackground"
        />

    <ProgressBar
        android:id="@+id/step_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:progress="100"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbtn" />

    <Button
        android:id="@+id/regi_google"
        style="@style/ButtonGreenStyle"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/register_google"
        android:drawableLeft="@drawable/ic_google"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_bar" />

    <TextView
        android:id="@+id/no_share_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_share_info"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regi_google" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/continueBtnEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_share_info">

        <RelativeLayout
            android:id="@+id/layout_psuedo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/register_up_down_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pseudo"
                android:paddingVertical="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:width="10dp"
                android:height="10dp"
                android:src="@drawable/ic_checked" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/register_up_down_border"
            android:hint="@string/email"
            android:paddingVertical="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/register_up_down_border"
            android:hint="@string/prenom"
            android:paddingVertical="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RelativeLayout
            android:id="@+id/layout_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/register_up_down_border"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_up_down_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/hide_mdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:width="15dp"
                android:height="15dp"
                android:src="@drawable/icon_eye_close_line" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            android:background="@drawable/register_up_down_border"
            android:hint="@string/nom"
            android:paddingVertical="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/continueBtnEmail"
        style="@style/ButtonGreyStyle"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_continue"
        android:onClick="goToDoubleAuth"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/condition_politic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/condition_politic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="25dp"
        android:text="@string/condition_politic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>