<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0F0F"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/backbtn"
        android:contentDescription="@string/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="15dp"
        android:onClick="goToRegisterMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/arrow_right"
        android:background="?android:selectableItemBackground"
        />

    <TextView
        android:id="@+id/double_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/double_auth_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbtn" />

    <TextView
        android:id="@+id/numero_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_marginStart="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/double_title" />


    <LinearLayout
        android:id="@+id/tel_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero_title">

        <Spinner
            android:id="@+id/tel_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/spinner_bg"
            android:backgroundTint="@color/white"
            android:dropDownWidth="200dp"
            android:spinnerMode="dropdown" />


        <EditText
            android:id="@+id/tel_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Numéro de téléphone"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="19dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:background="@drawable/register_down_border"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />
    </LinearLayout>

    <TextView
        android:id="@+id/double_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:text="@string/double_auth_des"
        android:textColor="@color/custom_color_slider_widget_selected"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel_connect" />

    <Button
        android:id="@+id/continueBtnDoubleAuth"
        style="@style/ButtonGreyStyle"
        android:layout_marginTop="80dp"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/double_des" />

    <TextView
        android:id="@+id/condition_politic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="25dp"
        android:text="@string/condition_politic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>