<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#0B0F0F">

    <ProgressBar
        android:id="@+id/step_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="405dp"
        android:layout_height="7dp"
        android:layout_marginTop="4dp"
        android:progress="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender_title"
        android:layout_width="326dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/register_sport_title"
        android:textColor="#EBF5F9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/step_bar" />

    <TextView
        android:id="@+id/gender_des"
        android:layout_width="335dp"
        android:layout_height="88dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_sport_des"
        android:textColor="#EBF5F9"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_title" />


    <LinearLayout
        android:id="@+id/icon_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_des">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_rando"
                android:contentDescription="@string/rando"
                android:layout_width="91dp"
                android:layout_height="91dp"
                android:scaleType="fitCenter"
                android:alpha="0.4"
                android:src="@drawable/register_ic_rando"
                android:background="?android:selectableItemBackground"/>

            <TextView
                android:id="@+id/text_rando"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/rando"
                android:textAlignment="center"
                android:textColor="#EBF5F9"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="32dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_escalade"
                android:contentDescription="@string/escalade"
                android:layout_width="91dp"
                android:layout_height="91dp"
                android:scaleType="fitCenter"
                android:alpha="0.4"
                android:src="@drawable/register_ic_escalade"
                android:background="?android:selectableItemBackground"/>

            <TextView
                android:id="@+id/txt_escalade"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/escalade"
                android:textAlignment="center"
                android:textColor="#EBF5F9"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="32dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_snow"
                android:contentDescription="@string/snow"
                android:layout_width="91dp"
                android:layout_height="91dp"
                android:scaleType="fitCenter"
                android:alpha="0.4"
                android:src="@drawable/register_ic_snow"
                android:background="?android:selectableItemBackground"/>

            <TextView
                android:id="@+id/txt_snow"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/snow"
                android:textAlignment="center"
                android:textColor="#EBF5F9"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/sports_list"
        android:layout_width="404dp"
        android:layout_height="122dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_select" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="359dp"
        android:layout_height="45dp"
        android:layout_marginBottom="25dp"
        android:text="@string/btn_continue"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 